--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css">
     <title>Counter Web</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body class="overflow-hidden">
+    <h2>Counter</h2>
+
+    <div
+      class="d-flex flex-column justify-content-center align-items-center vh-100 text-center"
+    >
+      <div>
+        Counter value:<br />
+        <p id="counterDisplay" class="fs-1">0</p>
+      </div>
+      <div>
+        <button id="decrementBtn" class="" onclick="decrement()">-</button>
+        <button id="incrementBtn" class="" onclick="increment()">+</button>
+      </div>
+      <div class="mt-2">
+        <button id="decrementTenBtn" class="btn" onclick="decrementTen()">-10</button>
+        <button id="incrementTenBtn" class="btn" onclick="incrementTen()">+10</button>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
